2006-10-19  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/armelf.em (arm_elf_before_allocation): Run
	gld${EMULATION_NAME}_before_allocation later.
	* ldlang.c (lang_size_sections_1): Revert 2006-09-15 change.

2006-10-18  Roy Marples  <uberlord@gentoo.org>

	* emulparams/elf64_sparc_fbsd.sh (OUTPUT_FORMAT): Define as
	elf64-sparc-freebsd.

2006-10-18  Joseph Myers  <joseph@codesourcery.com>

	* configure.tgt (i[3-7]86-*-linux-*): Also define
	targ_extra_libpath in want64 case.
	* emulparams/elf_x86_64.sh: Handle i[3-7]86-*-linux-* the same as
	x86_64*-linux*.

2006-10-17  Alan Modra  <amodra@bigpond.net.au>

	* scripttempl/elf.sc (INTERP): Delete.  Move definition to..
	(INITIAL_READONLY_SECTIONS): ..here.
	* emulparams/criself.sh (INITIAL_READONLY_SECTIONS): Include .interp.
	* emulparams/elf32bmip.sh (INITIAL_READONLY_SECTIONS): Ditto.
	* emulparams/elf32bmipn32-defs.sh (INITIAL_READONLY_SECTIONS): Ditto.

2006-10-17  Alan Modra  <amodra@bigpond.net.au>

	* ldlang.c (strip_excluded_output_sections): Do strip sections
	that define syms, but don't ignore them.
	* ld.texinfo (Output Section Discarding): Revise.
	* emultempl/armcoff.em (gld${EMULATION_NAME}_finish): Always call
	finish_default.

2006-10-16  Richard Sandiford  <richard@codesourcery.com>

	* Makefile.am (eelf64bmip.c): Depend on emulparams/elf64bmip-defs.sh.
	(eelf64btsmip.c, eelf64ltsmip.c): Likewise.
	* Makefile.in: Regenerate.
	* emulparams/elf32bmipn32-defs.sh (INITIAL_READONLY_SECTIONS): Include
	.reginfo rather than .MIPS.options.
	* emulparams/elf64bmip-defs.sh: New file.
	* emulparams/elf64bmip.sh: Include it.
	(COMMONPAGESIZE): Delete.
	* emulparams/elf64btsmip.sh: As for elf64bmip.sh.

2006-10-12  Bob Wilson  <bob.wilson@acm.org>

	* emultempl/xtensaelf.em (is_inconsistent_linkonce_section): Check
	for linkonce XCC exception tables (".e" and ".h").

2006-10-11  Bob Wilson  <bob.wilson@acm.org>

	* emulparams/elf32xtensa.sh (TEXT_PLT): Enable.