@@ -1,3 +1,8 @@
+2006-10-20  Richard Sandiford  <richard@codesourcery.com>
+
+	* emulparams/elf32bmip.sh (OTHER_GOT_RELOC_SECTIONS): Define.
+	* emulparams/elf32bmipn32-defs.sh (OTHER_GOT_RELOC_SECTIONS): Likewise.
+
 2006-10-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* emultempl/armelf.em (arm_elf_before_allocation): Run
